# tycho

./: .gitignore  Cargo.toml  numbers.lua  test.ty
benches/: my_benchmark.rs
includes/: base.ty  basic.ty  math.ty  string.ty  table.ty
lualib/: tycho.lua
src/: bench.rs  cli.rs  compiler.rs  driver.rs  errors.rs  lexer.rs  lib.rs  main.rs  mem_size.rs  parser.rs  pretty.rs  sourcemap.rs  transpiler.rs  type_env.rs  typecheck.rs  types.rs  util.rs
src/error/: mod.rs
src/luajit/: bytecode.rs  compiler.rs  funcstate.rs  mod.rs  print.rs  utils.rs
src/parser/: ast.rs  error.rs  mod.rs  pool.rs  second.rs
src/typecheck/: ctx.rs  error.rs  func_ctx.rs  mod.rs  pool.rs  type_env.rs  types.rs
src/types/: pool.rs
src/utils/: indenter.rs  mod.rs  pooled.rs  span.rs  spanned.rs
test/: json.lua  json.ty  out.lua  test.lua  test.ty
test/errors/: cross_file.ty
test/errors/parse/: expected_name.ty  gibberish.ty  local.ty
test/errors/typecheck/: bad_access.ty  bad_index.ty  bad_negate.ty  bad_not.ty  call_non_func.ty  method_on_wrong_type.ty  mismatched_types.ty  no_return.ty  no_such_field.ty  no_such_method.ty  no_such_val.ty  return_count.ty
test/features/: vararg.ty
