[package]
name = "tycho-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.71", features = ["backtrace"]}
logos = "0.13.0"
mimalloc = { version = "*", default-features = false }
rustc-hash = "1.1.0"
structopt = "0.3.26"
thiserror = "1.0.40"


[profile.release]
debug = 1
lto = true
codegen-units = 1
