[package]
name = "tycho"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { version = "*", default-features = false }
structopt = "0.3.26"
logos = "0.15.0"
rustc-hash = "2.1.0"
thiserror = "2.0.11"

[profile.dev-rel]
debug = 1
inherits = "release"

[profile.bench]
lto = "fat"
codegen-units = 1

[dev-dependencies]
logos = "0.15.0"
criterion2 = "2.0.0"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "tycho"
path = "src/bin/main.rs"
bench = false
